fix: Java 8兼容修复 — 替换var/List.of/Map.of为显式类型(正式代码部分)